--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-./backend/bin
-./backend/include
-./backend/lib
-./backend/pyvenv.cfg
+backend/bin
+backend/include
+backend/lib
+backend/pyvenv.cfg
